force-app/main/default/objects/TwilioSF__TwilioMetaData__c/TwilioSF__TwilioMetaData__c.object-meta.xml
<CustomObject>
    <label>Twilio MetaData</label>
    <nameField>
        <label>Messaging Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twilio MetaData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>