force-app/main/default/objects/TwilioSF__TwilioMetaData__c/fields/TwilioSF__AccountSID__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__AccountSID__c</fullName>
    <label>Account SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>