force-app/main/default/objects/TwilioSF__TwilioMetaData__c/fields/TwilioSF__IsUsed__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__IsUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag will be set to true, If messaging service is used inside configuration settings or if it is used by any team.</inlineHelpText>
    <label>Is Used</label>
    <type>Checkbox</type>
</CustomField>