force-app/main/default/objects/TwilioSF__TwilioMetaData__c/fields/TwilioSF__MessagingServiceId__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__MessagingServiceId__c</fullName>
    <externalId>true</externalId>
    <label>Messaging Service Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>