force-app/main/default/objects/TwilioSF__TwilioMetaData__c/recordTypes/TwilioSF__Messaging_Service.recordType-meta.xml
<RecordType>
    <fullName>TwilioSF__Messaging_Service</fullName>
    <active>true</active>
    <label>Messaging Service</label>
</RecordType>