force-app/main/default/objects/TwilioSF__TwilioMetaData__c/listViews/TwilioSF__All.listView-meta.xml
<ListView>
    <fullName>TwilioSF__All</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__MessagingServiceId__c</columns>
    <columns>TwilioSF__IsUsed__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>